fix: resolve security vulnerabilities and CI/CD permissions
Security Fixes:
- Add pnpm overrides to fix esbuild vulnerability (CVE <=0.24.2 → >=0.25.0)
- Update quill dependency to v2.0.2 to resolve XSS vulnerability (CVE <=1.3.7)
- All moderate+ security vulnerabilities now resolved

CI/CD Improvements:
- Add proper permissions to all GitHub Actions workflows
  - contents: read, statuses: write, checks: write for main CI pipeline
  - pull-requests: write for coverage and performance workflows
  - security-events: write for security workflow
  - deployments: write for deployment workflow
- Fix audit commands to handle zero-vulnerability scenarios gracefully
- Ensure security audit steps don't fail workflow on clean results

Dependencies:
- Update pnpm workspace configuration for security overrides
- Refresh lockfile to apply vulnerability patches
- Maintain compatibility across Node.js 18, 20, 22

This resolves the 'Resource not accessible by integration' GitHub API errors
and ensures all security scans pass in CI/CD pipeline.

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -10,6 +10,11 @@ on:
     - cron: '0 2 * * *'
   workflow_dispatch:
 
+permissions:
+  contents: read
+  security-events: write
+  issues: write
+
 jobs:
   security-scan:
     name: Security Vulnerability Scan
