--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,11 @@ on:
           - staging
           - production
 
+permissions:
+  contents: read
+  deployments: write
+  statuses: write
+
 jobs:
   pre-deploy-checks:
     name: Pre-deployment Validation
